fix: not showing pointer on marker hover

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -300,7 +300,6 @@ li {
     padding: 10px;
     box-sizing: border-box;
     outline: none;
-    display: none;
 }
 
 .close-button {
